2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_incrdecr): Improve
	diagnostics.
	* testsuite/poke.pkl/postincr-diag-1.pk: Update expected error.
	* testsuite/poke.pkl/postincr-diag-3.pk: Likewise.
	* testsuite/poke.pkl/postincr-diag-2.pk: Likewise.
	* testsuite/poke.pkl/postincr-diag-4.pk: Likewise.
	* testsuite/poke.pkl/preincr-diag-2.pk: Likewise.
	* testsuite/poke.pkl/preincr-diag-1.pk: Likewise.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_map): Improve diagnostics.
	* testsuite/poke.pkl/map-diag-6.pk: New test.
	* testsuite/poke.pkl/map-ios-diag-1.pk: Update expected error.
	* testsuite/poke.pkl/map-ios-diag-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Improve
	diagnostics.
	* testsuite/poke.pkl/int-struct-type-diag-16.pk: New test.
	* testsuite/poke.pkl/int-struct-type-diag-17.pk: Likewise.
	* testsuite/poke.pkl/int-struct-type-diag-14.pk: Update test.
	* testsuite/poke.pkl/int-struct-type-diag-12.pk: Likewise.
	* testsuite/poke.pkl/int-struct-type-diag-8.pk: Likewise.
	* testsuite/poke.pkl/int-struct-type-diag-9.pk: Likewise.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_struct_ref): Improve
	diagnostics.
	* testsuite/poke.pkl/struct-ref-diag-1.pk: Update expected error.
	* testsuite/poke.pkl/struct-ref-diag-2.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_indexer): Improve
	diagnostics.
	* testsuite/poke.pkl/arrays-index-diag-4.pk: New test.
	* testsuite/poke.pkl/arrays-index-diag-5.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_trimmer): Improve
	diagnostics.