@@ -1,5 +1,14 @@
 2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-typify.c (pkl_typify1_ps_loop_stmt): Improve
+	diagnostics.
+	(pkl_typify1_ps_loop_stmt_iterator): Likewise.
+	* testsuite/poke.pkl/for-diag-1.pk: Update expected error.
+	* testsuite/poke.pkl/for-diag-2.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
+2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-typify.c (pkl_typify1_ps_incrdecr): Improve
 	diagnostics.
 	* testsuite/poke.pkl/postincr-diag-1.pk: Update expected error.
